--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- ===========================google icons==================================== -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    
+    <link rel="shortcut icon" href="arquivos/favicon/calculadora-favicon.ico" type="image/x-icon">
 <!-- =============================== css ======================================= -->
     <link rel="stylesheet" href="arquivos/calculo.css">
     <title>Calculadora</title>
