--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     
     <link rel="shortcut icon" href="arquivos/favicon/calculadora-favicon.ico" type="image/x-icon">
 <!-- =============================== css ======================================= -->
-    <link rel="stylesheet" href="arquivos/calculo.css">
+    <link rel="stylesheet" href="arquivos/main.css">
     <title>Calculadora</title>
 </head>
 <body>
@@ -34,7 +34,7 @@
                     <div onclick="valores(7)">7</div>
                     <div onclick="valores(8)">8</div>
                     <div onclick="valores('.')">.</div>
-                    <div onclick="valores('9')">9</div>
+                    <div onclick="valores(9)">9</div>
                     <div onclick="apaga()">
                         <span class="material-symbols-outlined">backspace</span>
                     </div>
@@ -50,6 +50,7 @@
             </section>
         </div>
     </main>
+    
     <script src="arquivos/calculo.js"></script>
 </body>
 </html>
